Fix homepage on mobile

--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -65,6 +65,8 @@ body {
                     border: none;
 
                     .navbar {
+                        padding: 1rem;
+                        
                         .navbar-nav {
                             position: unset;
                             left: 0;
@@ -92,7 +94,7 @@ body {
                     margin-top: 0;
 
                     h1 {
-                        font-size: 5rem;
+                        font-size: 4rem;
                     }
                 }
             }
